# meetingai-note-worker

./: .env.example  .gitignore  README.md  __init__.py  __main__.py  app.py  main.py  pyproject.toml  runner.py
services/: __init__.py  meeting_mail_service.py  meeting_note_service.py  ollama_service.py
